# Custom-Image-Format-Editor

./: .gitignore  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
include/: hw2.h
src/: hw2_main.c
tests/expected_outputs/: cactus_from_ppm.ppm  combined1.ppm  combined2.ppm  combined3.ppm  desert.ppm  desert.sbu  desert_overflow_message1_1.ppm  desert_overflow_message2_2.ppm  desert_overflow_message3_2.ppm  desert_overflow_message4_1.ppm  desert_short_message1_2.ppm  desert_short_message2_1.sbu  desert_short_message2_2.ppm  overlapping1.ppm  seawolf.ppm  stony1_1.ppm  stony1_2.ppm  stony2_1.ppm  stony2_2.sbu  stony3_1.ppm  stony3_2.sbu  stony4_1.ppm  stony4_2.ppm  stony5_1.ppm  stony6_1.ppm  stony6_2.sbu
tests/fonts/: font1.txt  font2.txt  font3.txt  font4.txt
tests/images/: desert.ppm  seawolf.ppm  seawolf.sbu  stony.ppm  stony.sbu
tests/include/: tests_aux.h
tests/src/: cleanup.sh  tests_aux.cpp  tests_combined_operations.cpp  tests_combined_operations_valgrind.cpp  tests_copy_paste.cpp  tests_copy_paste_valgrind.cpp  tests_load_save.cpp  tests_load_save_valgrind.cpp  tests_printing.cpp  tests_printing_valgrind.cpp  tests_validate_args.cpp
